# blog

./: .gitignore  about.rst  contact.markdown  hakyll.hs  index.html  links.markdown  site.hs
_site/: about.html  archive.html  contact.html  index.html  links.html  pages.html  posts.html  rss.xml
css/: default.css  style.css
drafts/: 2012-11-08-6920packs  2012-11-08-6920packs.hi  2012-11-08-6920packs.lhs  2012-11-09-KnapSack.lhs  2013-03-28-GetKth.lhs  2013-04-13-CategoryTheory.lhs  2013-04-13-HaskellLiveCoding.lhs  2013-04-13-InformationTheory.lhs  2013-04-13-TypeFamily.lhs  DedupeFFI.hs  Dude.hs  DummyDedupe.hs  KMeans.hs  KleisliComposition.lhs
drafts/haksup/: Test.hs  haksup.cabal
drafts/haksup/src/: Test.hs
drafts/haksup/src/Haksup/Clustering/: KMeans.hs
drafts/stl-containers/: Test.hs  dedupeffi.hs  stl-containers.cabal
drafts/stl-containers/Data/: DataTypes.hsc  UnorderedMap.hs  UnorderedMapP.chs  hashmap.h
drafts/stl-containers/c++/: Makefile  hashmap.cpp  hashmap.h  test.cpp
drafts/stl-containers/src/Data/: UnorderedMap.hs
drafts/stl-containers/src/c++/: hashmap.cpp  hashmap.h
files/: ShiftingPaths.cpp
pages/: AlgebraicDataTypes.lhs  ApplicativeFunctors.lhs  Arrows.lhs  CategoryTheory.lhs  Comonads.lhs  Functors.lhs  MonadTransformers.lhs  Monads.lhs  UsefulMonads.lhs
posts/: 2011-08-07-Tail Recursion.lhs  2011-08-12-Primes.lhs  2011-10-08-StanfordHaskell.lhs  2011-10-08-Y-Combinator.lhs  2011-10-09-Y-Combinator2.lhs  2011-10-09-Y-Combinator3.lhs  2011-10-09-Y.lhs  2011-10-10-LLVM.lhs  2011-10-24-HaskellAmuse.lhs  2011-11-10-FixedPointCombinator.lhs  2011-11-25-Memoization.lhs  2011-11-25-Memoization2.lhs  2011-11-30-FixFix'.lhs  2011-11-30-OpenRecursion.lhs  2011-11-30-Y-in-Haskell.lhs  2011-12-01-Nirvana.lhs  2012-11-02-MemoizationRace.lhs  2012-11-03-HakyllAndGithub.lhs  2012-11-04-BoxFactory.lhs  2012-11-04-ShiftingPaths.lhs  2012-11-08-DebuggingHaskell.lhs  2012-11-25-MonadMemo.lhs  2012-11-25-MonadTrie.lhs  2013-01-26-AlgebraicDataTypes.lhs  2013-03-11-Algebra_of_Algebraic_Data_Types.lhs  KMeans.hs  (+7 more)
(+93 files in other folders)
